0.12:

#7 Support for contributing servlet listeners

0.11:

#2 Support for contributing filters
#3 Support for multiple URL patterns for servlets
#5 Upgrade Bootique to 0.12
#6 Move contribution API from JettyBinder into static methods on JettyModule
 
0.10:

#1 New API for contributing Servlets