@@ -1,0 +1,50 @@
+package com.nhl.bootique.jetty.servlet;
+
+import java.util.Optional;
+
+import javax.servlet.ServletContext;
+import javax.servlet.ServletContextEvent;
+import javax.servlet.ServletContextListener;
+import javax.servlet.ServletRequestEvent;
+import javax.servlet.ServletRequestListener;
+import javax.servlet.http.HttpServletRequest;
+
+/**
+ * @since 0.12
+ */
+public class DefaultServletContainerState
+		implements ServletContextListener, ServletRequestListener, ServletContainerState {
+
+	private ServletContext context;
+	private ThreadLocal<HttpServletRequest> request = new ThreadLocal<>();
+
+	@Override
+	public Optional<ServletContext> context() {
+		return Optional.ofNullable(this.context);
+	}
+
+	@Override
+	public Optional<HttpServletRequest> request() {
+		return Optional.ofNullable(request.get());
+	}
+
+	@Override
+	public void contextInitialized(ServletContextEvent sce) {
+		this.context = sce.getServletContext();
+	}
+
+	@Override
+	public void contextDestroyed(ServletContextEvent sce) {
+		this.context = null;
+	}
+
+	@Override
+	public void requestInitialized(ServletRequestEvent sre) {
+		request.set((HttpServletRequest) sre.getServletRequest());
+	}
+
+	@Override
+	public void requestDestroyed(ServletRequestEvent sre) {
+		request.set(null);
+	}
+}
